# krtk.rs

./: .gitignore  Cargo.toml  README.md  cdk.json  justfile  package-lock.json  package.json  todo.md
lambda/create_link/: Cargo.toml  README.md
lambda/create_link/src/: main.rs
lambda/get_links/: Cargo.toml  README.md
lambda/get_links/src/: main.rs
lambda/process_analytics/: Cargo.toml  README.md
lambda/process_analytics/src/: event_handler.rs  main.rs
lambda/visit_link/: Cargo.toml  README.md
lambda/visit_link/src/: http_handler.rs  main.rs
lib/: certificate-stack.ts  krtk-rs-stack.ts  secrets-stack.ts
shared/: Cargo.toml
shared/src/: core.rs  lib.rs  response.rs  safe_browsing.rs  templates.rs  url_info.rs
shared/templates/: error_popup.html  links_table.html  new_short_link.html
test/: krtk-rs.test.ts
website/: index.html  privacy  terms
website/assets/: main.js
