[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-dynamodb = "1.58.0"
cuid2 = "0.1.3"
lambda_http = "0.14.0"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "http2"] }
scraper = "0.22.0"
serde = "1.0.217"
serde_json = "1.0.134"
url = "2.5.4"
