[package]
name = "create_link"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = {path="../../shared"}

lambda_http = "0.13.0"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
aws-config = { version = "1.5.13", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.58.0"
serde_json = "1.0.134"
