[package]
name = "process_analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["kinesis"] }
shared = {path="../../shared"}

lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
aws-config = { version = "1.5.13", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.58.0"
